<resources>
    <string name="app_name">Beverage Inventory</string>

    <!--in@activity_main.xml-->
    <string name="empty_txt">Click the icon on top-right corner to add a product.</string>


    <!--in @list_item-->
    <string name="btn_sell_1">sell 1</string>
    <string name="lstItm_price">Price:</string>

    <!--in @menu_main-->
    <string name="action_add">Add</string>

    <!--in @InfoActivity-->
    <string name="pic_hint">Tap to upload a picture</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="update">Update quantity: </string>
    <string name="increase_by">Increase by</string>
    <string name="decrease_by">Decrease by</string>
    <string name="increase_btntxt">+</string>
    <string name="decrease_btntxt">-</string>
    <string name="supplier">Supplier: </string>
    <string name="order_more">Order more</string>
    <string name="title_add_prod">Add</string>
    <string name="title_edit_prod">Edit</string>
    <!--delete confirmation dialoge-->
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <!--unsaved changes comfirmation dialog-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>


    <!--Toasts in @InfoActivity-->
    <string name="editor_delete_successful">Product deleted</string>
    <string name="editor_delete_failed">Error with deleting product</string>
    <string name="editor_insert_successful">Product saved</string>
    <string name="editor_insert_failed">Error with saving product</string>
    <string name="editor_update_successful">Product updated</string>
    <string name="editor_update_failed">Error with updating product</string>
    <string name="editor_update_nothing">Nothing changed</string>
    <string name="editor_decrement_failed">Negative quantity!</string>
    <string name="editor_enter_num">Please enter a number!</string>
    <string name="editor_insert_nothing">Nothing inserted</string>

    <!--Toasts in @ListItem-->
    <string name="delete_reminder">Click on the product then delete it</string>

    <!--in @menu_info-->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>




</resources>
