<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.beverageinventory.InfoActivity"
    android:orientation="vertical">

    <!--image, name, price and quantity field-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--image field-->
        <RelativeLayout
            android:id="@+id/image_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--最底层-->
            <View
                android:layout_width="@dimen/pic_width"
                android:layout_height="@dimen/pic_height"
                android:background="#E0E0E0">
            </View>

            <!--中间层-->
            <ImageView
                android:layout_width="@dimen/pic_width"
                android:layout_height="@dimen/pic_height" />

            <!--最上层-->
            <TextView
                android:layout_width="@dimen/pic_width"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/pic_hint"
                android:textColor="#000000"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"/>



        </RelativeLayout>

        <!--name, price and quantity-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <!--name field-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="@style/header_style"/>

                <EditText
                    android:layout_height="wrap_content"
                    style="@style/input_style"/>

            </LinearLayout>

            <!--price field-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    style="@style/header_style"/>

                <EditText
                    android:layout_height="wrap_content"
                    style="@style/input_style"/>

            </LinearLayout>

            <!--quantity field-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    style="@style/header_style"
                    android:id="@+id/textView" />

                <EditText
                    android:layout_height="wrap_content"
                    style="@style/input_style"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--update field-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <!--update header-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            style="@style/header_style"/>

        <!--increase by ... -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/increase_by"
                style="@style/sub_header_style"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                style="@style/input_style"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/increase_btntxt"/>

        </LinearLayout>

        <!--decrease by ... -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/decrease_by"
                style="@style/sub_header_style"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                style="@style/input_style"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/decrease_btntxt"/>

        </LinearLayout>


    </LinearLayout>

    <!--supplier and order more field-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <!--supplier header-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier"
            style="@style/header_style"/>

        <!--email address and order more btn -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--place to show supplier's email address-->
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                style="@style/input_style"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/order_more"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
